--- a/FreshHeadBackend/appsettings.json
+++ b/FreshHeadBackend/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source = mssqlstud.fhict.local; Initial Catalog = dbi485207_edudeals; Persist Security Info=True;User ID = dbi485207_edudeals; Password=welkom123; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
