start implementation of jwttoken

--- a/FreshHeadBackend/appsettings.json
+++ b/FreshHeadBackend/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "http://localhost:51800",
+    "Audience": "http://localhost:4200",
+    "Key": "This is our secret key, its not very safe"
+  }
 }
