--- a/FreshHeadBackend/appsettings.json
+++ b/FreshHeadBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source = mssqlstud.fhict.local; Initial Catalog = dbi485207_edudeals; Persist Security Info=True;User ID = dbi485207_edudeals; Password=welkom123; TrustServerCertificate=True;"
+    "Default": "Replace with environment variables"
   },
   "Logging": {
     "LogLevel": {
